fix the problem that too close to the border when minimize the dialog

--- a/vtr-ui/src/app/material.scss
+++ b/vtr-ui/src/app/material.scss
@@ -101,5 +101,6 @@ $van-ui-theme: mat-vcl-theme((
 
 	.cdk-overlay-pane {
 		height: auto;
+		margin: 3rem;
 	}
 }
